# task

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py  redis_client.py  schemas.py  settings.py
app/admin/: __init__.py  auth.py  setup.py  views.py
app/api/v1/: __init__.py  auth.py  otp.py  user.py
app/core/: __init__.py  database.py  exceptions.py  permissions.py  redis_client.py  security.py  settings.py  validators.py
app/core/security/: __init__.py  blacklist.py  dependencies.py  jwt.py
app/db/: database.py
app/db/crud/: user.py
app/db/models/: enums.py  user.py
app/models/: models.py
app/routers/: auth.py  otp.py  user.py
app/schemas/: __init__.py  auth.py  otp.py  user.py
app/services/: __init__.py  auth_service.py  otp_service.py  user_service.py
